fixed the h3 tags being left aligned and opted for white text to allow them to stand out

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ h1 {
     color: #273B70;
 }
 
+h3 {
+    text-align: center;
+    color: white;
+}
 .projects { 
     display:flex; flex-wrap:wrap; 
 }
